--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang = "en">
     <head>
         <meta charset="UTF-8">
-        <title>My First Project</title>
+        <title>My First Project my nigga</title>
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <h1>
+            "Hello World!"
+        </h1>
     </body>
+
 </html>
