--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -2,7 +2,7 @@
 <html lang = "en">
     <head>
         <meta charset="UTF-8">
-        <title>My First Project my nigga</title>
+        <title>My First Project</title>
     </head>
     <body>
         <h1>
