index page updated

--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -8,7 +8,9 @@
 <body>
     <h1>Homepage</h1>
     <a href="https://theodinproject.com/about" target="_blank" rel="noreferrer">click me</a>
-    <a href="Pages/about.html">About</a>
+    <a href="./Pages/about.html">About</a>
+    <img src="./Images/dog.jpg" alt="Charles is the man" height="310" width="310">
+
 
 
 </body>
