--- a/index.html
+++ b/index.html
@@ -1,38 +1,14 @@
 <!DOCTYPE html>
-<html lang = "en">
-    <head>
-        <meta charset="UTF-8">
-        <title>My First Project</title>
-    </head>
-    <body>
-        <h1>
-            Loren Ipsum
-        </h1>
-        <h2>
-            Lorem Ipsum
-        </h2>
-        <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum, ex odit! Molestiae, dolorum dolore ad fugit eos eligendi perferendis fugiat voluptatum animi saepe beatae fuga inventore sit accusamus a impedit!
-        </p>
-        <ul>
-        <li>Dog 1</li>
-        <li>Dog 2</li>
-        <li>Dog 3</li>
-        <li>Dog 4</li>
-        <li>Dog 5</li>
-        <li>Dog 6</li>
-        <li>Dog 7</li>
-        </ul>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>My First Webpage</title>
+</head>
 
-        <ol>
-            <li>Dog 1</li>
-            <li>Dog 2</li>
-            <li>Dog 3</li>
-            <li>Dog 4</li>
-            <li>Dog 5</li>
-            <li>Dog 6</li>
-            <li>Dog 7</li>
-        </ol>
-    </body>
+<body>
+    <h1>Homepage</h1>
+    <a href="https://www.theodinproject.com/about" target="_blank" rel="noopener noreferrer">About the Odin Project</a>
+    <a href="about.html">About</a>
 
+</body>
 </html>
