--- a/odin-links-and-images/about.html
+++ b/odin-links-and-images/about.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Links and Images</title>
+    <title>Document</title>
 </head>
 <body>
     <h1>About Page</h1>
-    <img src="../Images/dog.jpg" alt="Charles is the man">
 </body>
 </html>
